[project]
name = "ML-C6"
version = "0.1.0"
description = "Machine Learning Course 6"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter-cache>=1.0.1",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "pyyaml>=6.0.3",
]
